--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -11,6 +11,7 @@
   </localfile>
   <!-- File integrity monitoring -->
   <syscheck>
+    <disabled>no</disabled>
     <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
   </syscheck>
 </agent_config>
