--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -18,7 +18,7 @@
     </synchronization>
   </wodle>
 
-  <!-- wc002 - Security Configuration Assessment ----------- -->
+  <!-- wc003 - Security Configuration Assessment ----------- -->
   <sca>
     <enabled>yes</enabled>
     <scan_on_start>yes</scan_on_start>
@@ -26,14 +26,14 @@
     <skip_nfs>yes</skip_nfs>
   </sca>
 
-  <!-- wc003 - File integrity monitoring ----------- -->
+  <!-- wc004 - File integrity monitoring ----------- -->
   <syscheck>
     <disabled>no</disabled>
     <frequency>21600</frequency>
     <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
   </syscheck>
 
-  <!-- wc004 - Log data collection ----------- -->
+  <!-- wc005 - Log data collection ----------- -->
   <localfile>
     <location>Security</location>
     <log_format>eventchannel</log_format>
@@ -61,19 +61,29 @@
     <log_format>syslog</log_format>
   </localfile>
 
-  <!-- wc005 - Command monitoring ----------- -->
+  <!-- wc006 - Command monitoring ----------- -->
   <localfile>
     <log_format>command</log_format>
     <command>sysmon64 -c "C:\Program Files (x86)\ossec-agent\shared\sysmonconfig.xml"</command>
     <frequency>360</frequency>
   </localfile>
 
-  <!-- wc006 - Active Response ----------- -->
+  <!-- wc007 - Active Response ----------- -->
   <active-response>
     <disabled>no</disabled>
     <ca_store>wpk_root.pem</ca_store>
     <ca_verification>yes</ca_verification>
   </active-response>
+
+  <!-- wc008 - Osquery ----------- -->
+  <wodle name="osquery">
+    <disabled>no</disabled>
+    <run_daemon>yes</run_daemon>
+    <bin_path>C:\Program Files\osquery\osqueryd</bin_path>
+    <log_path>C:\Program Files\osquery\log\osqueryd.results.log</log_path>
+    <config_path>C:\Program Files (x86)\ossec-agent\shared\osquery.conf</config_path>
+    <add_labels>yes</add_labels>
+  </wodle>
 
   <!-- Logging ----------- -->
   <logging>
