--- a/manager.conf
+++ b/manager.conf
@@ -96,7 +96,7 @@
   </sca>
 
 
-  <!-- Vulnerability Detector ----------- -->
+  <!-- wc001 - Vulnerability Detector ----------- -->
   <vulnerability-detector>
     <enabled>yes</enabled>
     <interval>5m</interval>
