chore: alert.log=no

--- a/manager.conf
+++ b/manager.conf
@@ -1,17 +1,20 @@
 <ossec_config>
   <global>
-    <jsonout_output>yes</jsonout_output>
-    <alerts_log>yes</alerts_log>
     <logall>no</logall>
     <logall_json>no</logall_json>
+    <alerts_log>no</alerts_log>
+    <jsonout_output>yes</jsonout_output>
+    <rotate_interval>1d</rotate_interval>
+
     <email_notification>no</email_notification>
     <smtp_server>smtp.example.wazuh.com</smtp_server>
     <email_from>wazuh@example.wazuh.com</email_from>
     <email_to>recipient@example.wazuh.com</email_to>
     <email_maxperhour>12</email_maxperhour>
     <email_log_source>alerts.log</email_log_source>
+
     <agents_disconnection_time>10m</agents_disconnection_time>
-    <agents_disconnection_alert_time>0</agents_disconnection_alert_time>
+    <agents_disconnection_alert_time>5m</agents_disconnection_alert_time>
   </global>
 
   <alerts>
