--- a/manager.conf
+++ b/manager.conf
@@ -99,7 +99,7 @@
   </sca>
 
 
-  <!-- wc001 - Vulnerability Detector ----------- -->
+  <!-- wc001 - Vulnerability Detector - - - - - - - - - - - -->
   <vulnerability-detector>
     <enabled>yes</enabled>
     <interval>5m</interval>
@@ -349,6 +349,12 @@
     <disabled>yes</disabled>
   </cluster>
 
+  <!-- wi000 + Slack integration + + + + + -->
+  <integration>
+    <name>slack</name>
+    <hook_url>WEBHOOK_URL</hook_url> <!-- lr2 Replace WEBHOOK_URL with your Slack hook URL -->
+    <alert_format>json</alert_format>
+  </integration>
 </ossec_config>
 
 <ossec_config>
