--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -1,6 +1,6 @@
 <agent_config>
 
-  <!-- wc002 - System inventory ----------- -->
+  <!-- wc002 - System inventory - - - - - - - - - - - -->
   <wodle name="syscollector">
     <disabled>no</disabled>
     <interval>6h</interval>
@@ -18,7 +18,7 @@
     </synchronization>
   </wodle>
 
-  <!-- wc003 - Security Configuration Assessment ----------- -->
+  <!-- wc003 - Security Configuration Assessment - - - - - - - - - - - -->
   <sca>
     <enabled>yes</enabled>
     <scan_on_start>yes</scan_on_start>
@@ -26,21 +26,21 @@
     <skip_nfs>yes</skip_nfs>
   </sca>
 
-  <!-- wc004 - File integrity monitoring ----------- -->
+  <!-- wc004 - File integrity monitoring - - - - - - - - - - - -->
   <syscheck>
     <disabled>no</disabled>
     <frequency>21600</frequency>
     <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
   </syscheck>
 
-  <!-- wc005 - Log data collection ----------- -->
+  <!-- wc005 - Log data collection - - - - - - - - - - - -->
   <localfile>
     <location>Security</location>
     <log_format>eventchannel</log_format>
     <query>Event/System[EventID != 5145 and EventID != 5156]</query>
   </localfile>
 
-  <!-- Sysmon integration -->
+  <!-- wi001 + Sysmon integration + + + + + -->
   <localfile>
     <location>Microsoft-Windows-Sysmon/Operational</location>
     <log_format>eventchannel</log_format>
@@ -61,21 +61,21 @@
     <log_format>syslog</log_format>
   </localfile>
 
-  <!-- wc006 - Command monitoring ----------- -->
+  <!-- wc006 - Command monitoring - - - - - - - - - - - -->
   <localfile>
     <log_format>command</log_format>
     <command>sysmon64 -c "C:\Program Files (x86)\ossec-agent\shared\sysmonconfig.xml"</command>
     <frequency>360</frequency>
   </localfile>
 
-  <!-- wc007 - Active Response ----------- -->
+  <!-- wc007 - Active Response - - - - - - - - - - - -->
   <active-response>
     <disabled>no</disabled>
     <ca_store>wpk_root.pem</ca_store>
     <ca_verification>yes</ca_verification>
   </active-response>
 
-  <!-- wc008 - Osquery ----------- -->
+  <!-- wc008 - Osquery - - - - - - - - - - - -->
   <wodle name="osquery">
     <disabled>no</disabled>
     <run_daemon>yes</run_daemon>
@@ -85,7 +85,7 @@
     <add_labels>yes</add_labels>
   </wodle>
 
-  <!-- Logging ----------- -->
+  <!-- Logging - - - - - - - - - - - -->
   <logging>
     <log_format>plain</log_format>
   </logging>
