--- a/manager.conf
+++ b/manager.conf
@@ -325,11 +325,11 @@
   </localfile>
 
   <!-- wc007 - Active Response - - - - - - - - - - - -->
-  <active-response>
+  <!--active-response>
     <disabled>yes</disabled>
      <ca_store>etc/wpk_root.pem</ca_store>
      <ca_verification>yes</ca_verification>
-   </active-response>
+  </active-response-->
 
   <!-- Logging - - - - - - - - - - - -->
   <logging>
