--- a/linux/l1nux_s0urces.conf
+++ b/linux/l1nux_s0urces.conf
@@ -1,93 +1,95 @@
 <agent_config>
+    <labels>
+        <label key="agent_group">l1nux_s0urces</label>
+    </labels>
+    <!-- wc002 - System inventory - - - - - - - - - - - -->
+    <wodle name="syscollector">
+        <disabled>no</disabled>
+        <interval>6h</interval>
+        <scan_on_start>yes</scan_on_start>
+        <hardware>yes</hardware>
+        <os>yes</os>
+        <network>yes</network>
+        <packages>yes</packages>
+        <ports all="no">yes</ports>
+        <processes>yes</processes>
 
-  <!-- wc002 - System inventory - - - - - - - - - - - -->
-  <wodle name="syscollector">
-    <disabled>no</disabled>
-    <interval>6h</interval>
-    <scan_on_start>yes</scan_on_start>
-    <hardware>yes</hardware>
-    <os>yes</os>
-    <network>yes</network>
-    <packages>yes</packages>
-    <ports all="no">yes</ports>
-    <processes>yes</processes>
+        <!-- Database synchronization settings -->
+        <synchronization>
+        <max_eps>10</max_eps>
+        </synchronization>
+    </wodle>
 
-    <!-- Database synchronization settings -->
-    <synchronization>
-      <max_eps>10</max_eps>
-    </synchronization>
-  </wodle>
+    <!-- wc003 - Security Configuration Assessment - - - - - - - - - - - -->
+    <sca>
+        <enabled>yes</enabled>
+        <scan_on_start>yes</scan_on_start>
+        <interval>6h</interval>
+        <skip_nfs>yes</skip_nfs>
+    </sca>
 
-  <!-- wc003 - Security Configuration Assessment - - - - - - - - - - - -->
-  <sca>
-    <enabled>yes</enabled>
-    <scan_on_start>yes</scan_on_start>
-    <interval>6h</interval>
-    <skip_nfs>yes</skip_nfs>
-  </sca>
+    <!-- wc004 - File integrity monitoring - - - - - - - - - - - -->
+    <syscheck>
+        <disabled>no</disabled>
+        <frequency>21600</frequency>
+        <directories realtime="yes">/root/</directories>
+    </syscheck>
 
-  <!-- wc004 - File integrity monitoring - - - - - - - - - - - -->
-  <syscheck>
-    <disabled>no</disabled>
-    <frequency>21600</frequency>
-    <directories realtime="yes">/root/</directories>
-  </syscheck>
+    <!-- wc005 - Log data collection - - - - - - - - - - - -->
+    <localfile>
+        <log_format>syslog</log_format>                            
+        <location>/var/log/syslog</location>        
+    </localfile>
 
-  <!-- wc005 - Log data collection - - - - - - - - - - - -->
-  <localfile>
-    <log_format>syslog</log_format>                            
-    <location>/var/log/syslog</location>        
-  </localfile>
+    <localfile> 
+        <log_format>syslog</log_format>
+        <location>/var/log/dpkg.log</location>
+    </localfile>
 
-  <localfile> 
-    <log_format>syslog</log_format>
-    <location>/var/log/dpkg.log</location>
-  </localfile>
+    <localfile>
+        <log_format>syslog</log_format>                            
+        <location>/var/ossec/logs/active-responses.log</location>        
+    </localfile>
 
-  <localfile>
-    <log_format>syslog</log_format>                            
-    <location>/var/ossec/logs/active-responses.log</location>        
-  </localfile>
+    <localfile>
+        <log_format>apache</log_format>
+        <location>/var/log/nginx/error.log</location>
+    </localfile>
 
-  <localfile>
-    <log_format>apache</log_format>
-    <location>/var/log/nginx/error.log</location>
-  </localfile>
+    <localfile>
+        <log_format>apache</log_format>
+        <location>/var/log/apache2/error.log</location>
+    </localfile>
 
-  <localfile>
-    <log_format>apache</log_format>
-    <location>/var/log/apache2/error.log</location>
-  </localfile>
+    <!-- wc006 - Command monitoring - - - - - - - - - - - -->
+    <localfile>              
+        <log_format>command</log_format>
+        <command>df -P</command>
+        <frequency>360</frequency>
+    </localfile>
 
-  <!-- wc006 - Command monitoring - - - - - - - - - - - -->
-  <localfile>              
-    <log_format>command</log_format>
-    <command>df -P</command>
-    <frequency>360</frequency>
-  </localfile>
+    <localfile>
+        <log_format>full_command</log_format>
+        <command>netstat -tulpn | sed 's/\([[:alnum:]]\+\)\ \+[[:digit:]]\+\ \+[[:digit:]]\+\ \+\(.*\):\([[:digit:]]*\)\ \+\([0-9\.\:\*]\+\).\+\ \([[:digit:]]*\/[[:alnum:]\-]*\).*/\1 \2 == \3 == \4 \5/' | sort -k 4 -g | sed 's/ == \(.*\) ==/:\1/' | sed 1,2d</command>
+        <alias>netstat listening ports</alias>
+        <frequency>360</frequency>
+    </localfile>
 
-  <localfile>
-    <log_format>full_command</log_format>
-    <command>netstat -tulpn | sed 's/\([[:alnum:]]\+\)\ \+[[:digit:]]\+\ \+[[:digit:]]\+\ \+\(.*\):\([[:digit:]]*\)\ \+\([0-9\.\:\*]\+\).\+\ \([[:digit:]]*\/[[:alnum:]\-]*\).*/\1 \2 == \3 == \4 \5/' | sort -k 4 -g | sed 's/ == \(.*\) ==/:\1/' | sed 1,2d</command>
-    <alias>netstat listening ports</alias>
-    <frequency>360</frequency>
-  </localfile>
+    <localfile>
+        <log_format>full_command</log_format>
+        <command>last -n 20</command>
+        <frequency>360</frequency>
+    </localfile>
 
-  <localfile>
-    <log_format>full_command</log_format>
-    <command>last -n 20</command>
-    <frequency>360</frequency>
-  </localfile>
+    <!-- wc007 - Active Response - - - - - - - - - - - -->
+    <active-response>
+    <disabled>yes</disabled>
+        <ca_store>etc/wpk_root.pem</ca_store>
+        <ca_verification>yes</ca_verification>
+    </active-response>
 
-  <!-- wc007 - Active Response - - - - - - - - - - - -->
-  <active-response>
-   <disabled>yes</disabled>
-    <ca_store>etc/wpk_root.pem</ca_store>
-    <ca_verification>yes</ca_verification>
-  </active-response>
-
-  <!-- Logging - - - - - - - - - - - -->
-  <logging>
-    <log_format>plain</log_format>
-  </logging>
+    <!-- Logging - - - - - - - - - - - -->
+    <logging>
+        <log_format>plain</log_format>
+    </logging>
 </agent_config>
