--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -1,92 +1,94 @@
 <agent_config>
+    <labels>
+        <label key="agent_group">w1ndows_s0urces</label>
+    </labels>
+    <!-- wc002 - System inventory - - - - - - - - - - - -->
+    <wodle name="syscollector">
+        <disabled>no</disabled>
+        <interval>6h</interval>
+        <scan_on_start>yes</scan_on_start>
+        <hardware>yes</hardware>
+        <os>yes</os>
+        <network>yes</network>
+        <packages>yes</packages>
+        <ports all="no">yes</ports>
+        <processes>yes</processes>
 
-  <!-- wc002 - System inventory - - - - - - - - - - - -->
-  <wodle name="syscollector">
-    <disabled>no</disabled>
-    <interval>6h</interval>
-    <scan_on_start>yes</scan_on_start>
-    <hardware>yes</hardware>
-    <os>yes</os>
-    <network>yes</network>
-    <packages>yes</packages>
-    <ports all="no">yes</ports>
-    <processes>yes</processes>
+        <!-- Database synchronization settings -->
+        <synchronization>
+        <max_eps>10</max_eps>
+        </synchronization>
+    </wodle>
 
-    <!-- Database synchronization settings -->
-    <synchronization>
-      <max_eps>10</max_eps>
-    </synchronization>
-  </wodle>
+    <!-- wc003 - Security Configuration Assessment - - - - - - - - - - - -->
+    <sca>
+        <enabled>yes</enabled>
+        <scan_on_start>yes</scan_on_start>
+        <interval>6h</interval>
+        <skip_nfs>yes</skip_nfs>
+    </sca>
 
-  <!-- wc003 - Security Configuration Assessment - - - - - - - - - - - -->
-  <sca>
-    <enabled>yes</enabled>
-    <scan_on_start>yes</scan_on_start>
-    <interval>6h</interval>
-    <skip_nfs>yes</skip_nfs>
-  </sca>
+    <!-- wc004 - File integrity monitoring - - - - - - - - - - - -->
+    <syscheck>
+        <disabled>no</disabled>
+        <frequency>21600</frequency>
+        <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
+    </syscheck>
 
-  <!-- wc004 - File integrity monitoring - - - - - - - - - - - -->
-  <syscheck>
-    <disabled>no</disabled>
-    <frequency>21600</frequency>
-    <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
-  </syscheck>
+    <!-- wc005 - Log data collection - - - - - - - - - - - -->
+    <localfile>
+        <location>Security</location>
+        <log_format>eventchannel</log_format>
+        <query>Event/System[EventID != 5145 and EventID != 5156]</query>
+    </localfile>
 
-  <!-- wc005 - Log data collection - - - - - - - - - - - -->
-  <localfile>
-    <location>Security</location>
-    <log_format>eventchannel</log_format>
-    <query>Event/System[EventID != 5145 and EventID != 5156]</query>
-  </localfile>
+    <!-- wi001 + Sysmon integration + + + + + -->
+    <localfile>
+        <location>Microsoft-Windows-Sysmon/Operational</location>
+        <log_format>eventchannel</log_format>
+    </localfile>
 
-  <!-- wi001 + Sysmon integration + + + + + -->
-  <localfile>
-    <location>Microsoft-Windows-Sysmon/Operational</location>
-    <log_format>eventchannel</log_format>
-  </localfile>
+    <localfile>
+        <location>System</location>
+        <log_format>eventchannel</log_format>
+    </localfile>
 
-  <localfile>
-    <location>System</location>
-    <log_format>eventchannel</log_format>
-  </localfile>
+    <localfile>
+        <location>Application</location>
+        <log_format>eventchannel</log_format>
+    </localfile>
 
-  <localfile>
-    <location>Application</location>
-    <log_format>eventchannel</log_format>
-  </localfile>
+    <localfile>
+        <location>active-response\active-responses.log</location>
+        <log_format>syslog</log_format>
+    </localfile>
 
-  <localfile>
-    <location>active-response\active-responses.log</location>
-    <log_format>syslog</log_format>
-  </localfile>
+    <!-- wc006 - Command monitoring - - - - - - - - - - - -->
+    <localfile>
+        <log_format>command</log_format>
+        <command>sysmon64 -c "C:\Program Files (x86)\ossec-agent\shared\sysmonconfig.xml"</command>
+        <frequency>360</frequency>
+    </localfile>
 
-  <!-- wc006 - Command monitoring - - - - - - - - - - - -->
-  <localfile>
-    <log_format>command</log_format>
-    <command>sysmon64 -c "C:\Program Files (x86)\ossec-agent\shared\sysmonconfig.xml"</command>
-    <frequency>360</frequency>
-  </localfile>
+    <!-- wc007 - Active Response - - - - - - - - - - - -->
+    <active-response>
+        <disabled>no</disabled>
+        <ca_store>wpk_root.pem</ca_store>
+        <ca_verification>yes</ca_verification>
+    </active-response>
 
-  <!-- wc007 - Active Response - - - - - - - - - - - -->
-  <active-response>
-    <disabled>no</disabled>
-    <ca_store>wpk_root.pem</ca_store>
-    <ca_verification>yes</ca_verification>
-  </active-response>
+    <!-- wc008 - Osquery - - - - - - - - - - - -->
+    <wodle name="osquery">
+        <disabled>no</disabled>
+        <run_daemon>yes</run_daemon>
+        <bin_path>C:\Program Files\osquery\osqueryd</bin_path>
+        <log_path>C:\Program Files\osquery\log\osqueryd.results.log</log_path>
+        <config_path>C:\Program Files (x86)\ossec-agent\shared\osquery.conf</config_path>
+        <add_labels>yes</add_labels>
+    </wodle>
 
-  <!-- wc008 - Osquery - - - - - - - - - - - -->
-  <wodle name="osquery">
-    <disabled>no</disabled>
-    <run_daemon>yes</run_daemon>
-    <bin_path>C:\Program Files\osquery\osqueryd</bin_path>
-    <log_path>C:\Program Files\osquery\log\osqueryd.results.log</log_path>
-    <config_path>C:\Program Files (x86)\ossec-agent\shared\osquery.conf</config_path>
-    <add_labels>yes</add_labels>
-  </wodle>
-
-  <!-- Logging - - - - - - - - - - - -->
-  <logging>
-    <log_format>plain</log_format>
-  </logging>
+    <!-- Logging - - - - - - - - - - - -->
+    <logging>
+        <log_format>plain</log_format>
+    </logging>
 </agent_config>
