chore: new features

--- a/linux/l1nux_s0urces.conf
+++ b/linux/l1nux_s0urces.conf
@@ -1,4 +1,9 @@
 <agent_config>
+	<client_buffer>
+		<disabled>no</disabled>
+		<queue_size>5000</queue_size>
+		<events_per_second>500</events_per_second>
+	</client_buffer>
     <labels>
         <label key="agent_group">l1nux_s0urces</label>
     </labels>
@@ -32,7 +37,20 @@
     <syscheck>
         <disabled>no</disabled>
         <frequency>21600</frequency>
+        <scan_on_start>yes</scan_on_start>
+		<alert_new_files>yes</alert_new_files>
         <directories realtime="yes">/root/</directories>
+        <synchronization>
+			<enabled>yes</enabled>
+			<interval>5m</interval>
+			<max_interval>6h</max_interval>
+			<max_eps>60</max_eps>
+		</synchronization>
+		<!-- Maximum number of files to be monitored -->
+		<file_limit>
+			<enabled>no</enabled>
+			<entries>1000000</entries>
+		</file_limit>
     </syscheck>
 
     <!-- wc005 - Log data collection - - - - - - - - - - - -->
@@ -41,15 +59,30 @@
         <location>/var/log/syslog</location>        
     </localfile>
 
+	<localfile>
+		<log_format>syslog</log_format>
+		<location>/var/log/auth.log</location>
+	</localfile>
+
     <localfile> 
         <log_format>syslog</log_format>
         <location>/var/log/dpkg.log</location>
     </localfile>
 
+	<localfile>
+		<log_format>syslog</log_format>
+		<location>/var/log/kern.log</location>
+	</localfile>
+
     <localfile>
         <log_format>syslog</log_format>                            
         <location>/var/ossec/logs/active-responses.log</location>        
     </localfile>
+
+	<localfile>
+		<log_format>audit</log_format>
+		<location>/var/log/audit/audit.log</location>
+	</localfile>
 
     <localfile>
         <log_format>apache</log_format>
@@ -83,7 +116,7 @@
 
     <!-- wc007 - Active Response - - - - - - - - - - - -->
     <active-response>
-    <disabled>yes</disabled>
+        <disabled>yes</disabled>
         <ca_store>etc/wpk_root.pem</ca_store>
         <ca_verification>yes</ca_verification>
     </active-response>
