--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -63,6 +63,11 @@
     <log_format>eventchannel</log_format>
   </localfile>
 
+	<localfile>
+		<location>Microsoft-Windows-PowerShell/Operational</location>
+		<log_format>eventchannel</log_format>
+	</localfile>
+
   <localfile>
     <location>active-response\active-responses.log</location>
     <log_format>syslog</log_format>
