chore: fim -> win:download

--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -33,6 +33,7 @@
     <disabled>no</disabled>
     <frequency>21600</frequency>
     <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
+    <directories realtime="yes">C:\Users\*\Downloads</directories>
   </syscheck>
 
   <!-- wc005 - Log data collection - - - - - - - - - - - -->
