--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -34,6 +34,8 @@
     <frequency>21600</frequency>
     <directories realtime="yes">C:\Users\*\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</directories>
     <directories realtime="yes">C:\Users\*\Downloads</directories>
+    <directories realtime="yes">C:\Users\*\Desktop</directories>
+    <directories realtime="yes">C:\Users\*\Documents</directories>
   </syscheck>
 
   <!-- wc005 - Log data collection - - - - - - - - - - - -->
