--- a/resources/manager/manager.conf
+++ b/resources/manager/manager.conf
@@ -72,6 +72,8 @@
     <list>etc/lists/audit-keys</list>
     <list>etc/lists/amazon/aws-eventnames</list>
     <list>etc/lists/security-eventchannel</list>
+    <list>etc/lists/ioc/ipv4_addr</list>
+    <list>etc/lists/ioc/sha256_hash</list>
 
     <!-- User-defined ruleset -->
     <decoder_dir>etc/decoders</decoder_dir>
