chore: fim - cdblist - ioc

--- a/resources/manager/manager.conf
+++ b/resources/manager/manager.conf
@@ -72,8 +72,9 @@
     <list>etc/lists/audit-keys</list>
     <list>etc/lists/amazon/aws-eventnames</list>
     <list>etc/lists/security-eventchannel</list>
-    <list>etc/lists/ioc/ipv4_addr</list>
-    <list>etc/lists/ioc/sha256_hash</list>
+    <list>etc/lists/iocs/ipv4_addr</list>
+    <list>etc/lists/iocs/md5_hash</list>
+    <list>etc/lists/iocs/sha256_hash</list>
 
     <!-- User-defined ruleset -->
     <decoder_dir>etc/decoders</decoder_dir>
