--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -36,6 +36,7 @@
     <directories realtime="yes">C:\Users\*\Downloads</directories>
     <directories realtime="yes">C:\Users\*\Desktop</directories>
     <directories realtime="yes">C:\Users\*\Documents</directories>
+    <directories realtime="yes">C:\temp</directories>
   </syscheck>
 
   <!-- wc005 - Log data collection - - - - - - - - - - - -->
