chore: teams integration

--- a/resources/manager/manager.conf
+++ b/resources/manager/manager.conf
@@ -162,6 +162,14 @@
     <alert_format>json</alert_format>
     <level>12</level>
   </integration>
+
+  <!-- wi000.1 + Teams integration + + + + + -->
+  <integration>
+    <name>custom-teams_webhook</name>
+    <hook_url>TEAMS_WEBHOOK_URL</hook_url> <!-- lr2 Replace WEBHOOK_URL with your Teams hook URL -->
+    <alert_format>json</alert_format>
+    <level>12</level>
+  </integration>
 </ossec_config>
 
 <ossec_config>
