--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -37,6 +37,11 @@
     <directories realtime="yes">C:\Users\*\Desktop</directories>
     <directories realtime="yes">C:\Users\*\Documents</directories>
     <directories realtime="yes">C:\temp</directories>
+
+    <!-- Filter directory -->
+
+    <!-- Test directory -->
+    <directories check_all="yes" realtime="yes">c:\wtest</directories>
   </syscheck>
 
   <!-- wc005 - Log data collection - - - - - - - - - - - -->
