chore: teams integration

--- a/resources/manager/manager.conf
+++ b/resources/manager/manager.conf
@@ -158,7 +158,7 @@
   <!-- wi000 + Slack integration + + + + + -->
   <integration>
     <name>slack</name>
-    <hook_url>WEBHOOK_URL</hook_url> <!-- lr2 Replace WEBHOOK_URL with your Slack hook URL -->
+    <hook_url>SLACK_HOOK</hook_url> <!-- lr2 Replace WEBHOOK_URL with your Slack hook URL -->
     <alert_format>json</alert_format>
     <level>12</level>
   </integration>
@@ -166,7 +166,7 @@
   <!-- wi000.1 + Teams integration + + + + + -->
   <integration>
     <name>custom-teams_webhook</name>
-    <hook_url>TEAMS_WEBHOOK_URL</hook_url> <!-- lr2 Replace WEBHOOK_URL with your Teams hook URL -->
+    <hook_url>TEAMS_HOOK</hook_url> <!-- lr2 Replace WEBHOOK_URL with your Teams hook URL -->
     <alert_format>json</alert_format>
     <level>12</level>
   </integration>
