chore: windows powershell source

--- a/windows/w1ndows_s0urces.conf
+++ b/windows/w1ndows_s0urces.conf
@@ -61,6 +61,11 @@
     <log_format>eventchannel</log_format>
   </localfile>
 
+  <localfile>
+    <location>Windows PowerShell</location>
+    <log_format>eventchannel</log_format>
+  </localfile>
+
   <!-- wi001 + Sysmon integration + + + + + -->
   <localfile>
     <location>Microsoft-Windows-Sysmon/Operational</location>
